Updated the responsiveness in wolong, and nioh2 .html files. Added more content to martial_arts .txt and .html files. Added images in martial_arts/img/.

--- a/nioh2/nioh2.html
+++ b/nioh2/nioh2.html
@@ -230,17 +230,18 @@
     <!-- ========== ========== ==========
     Hero Section
     ========== ========== ========== -->
-    <section class="mt-6 lg:mt-28 flex flex-col items-center justify-center gap-4">
+    <section class="mt-28 flex flex-col items-center justify-center gap-4">
         <img src="./img/nioh2_logo_large.png" alt="">
-        <h1 class="  text-white text-6xl">Wiki</h1>
+        <h1 class="text-white text-6xl">Wiki</h1>
     </section>
 
 
     <!-- ========== ========== ==========
     Card Section
     ========== ========== ========== -->
-    <section class="mx-auto mt-6 gap-4
-        lg:w-[1320px] lg:mt-12 lg:mb-[200px] lg:grid lg:grid-cols-3">
+    <section class="w-full mx-auto mt-12 mb-32 px-6 gap-4
+        md:w-11/12 md:grid md:grid-cols-2
+        2xl:w-9/12 2xl:grid 2xl:grid-cols-3">
 
         <!-- 
         ==========
@@ -253,7 +254,7 @@
         <!-- ========== ==========
         Basics (Main Card 1)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -290,7 +291,7 @@
         <!-- ========== ==========
         Combat (Main Card 2)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -330,7 +331,7 @@
         <!-- ========== ==========
         Equipment (Main Card 3)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -379,7 +380,7 @@
         <!-- ========== ==========
         World (Main Card 4)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -419,7 +420,7 @@
         <!-- ========== ==========
         Tools & Resources (Main Card 5)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
@@ -459,7 +460,7 @@
         <!-- ========== ==========
         Online (Main Card 6)
         ========== ========== -->
-        <div class="mask my-6 lg:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
+        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-red">
             <!-- ========== 
             top row 
             ========== -->
