Updated the navbar and buttons for all major cards in main menu wolong.html. Updated the data in wolong_TODO.txt. Added more contents to martial_arts_temp and enemies .txt files. Added a new image to martial_arts/img/.

--- a/wolong/wolong.html
+++ b/wolong/wolong.html
@@ -80,10 +80,8 @@
                     <div id="basics_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2  text-gray-200" aria-labelledby="generalButton">
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Recommended Settings</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Starting Recommendations</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Character Stats</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">??? The Shrine ???</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Dojo</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">The Battleflag</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">NG+ Cycles</a></li>
                         </ul>
                     </div>
@@ -106,6 +104,7 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="https://liukang1080.github.io/gamewiki/wolong/combat/martial_arts/martial_arts.html">Martial Arts</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Morale Rank</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Five Phases / Status Effects</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Advanced Tech</a></li>
                         </ul>
                     </div>
 
@@ -121,10 +120,10 @@
                     <!-- Dropdown menu -->
                     <div id="equipment_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2  text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Weapons</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Armor</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Wizardry Spells</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Divine Beasts</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Weapons</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Armor</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Accessories</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Graces & Sets</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Items</a></li>
@@ -164,10 +163,8 @@
                     <!-- Dropdown menu -->
                     <div id="tools_dropdown" class="w-50 z-10 hidden divide-y divide-gray-100 rounded-lg shadow bg-medium-gray">
                         <ul class="py-2  text-gray-200" aria-labelledby="generalButton">
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Smithing Texts</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Temper Tables</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Blacksmith</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Stone of Penance</a></li>
+                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Embedment Tables</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Farming Resources</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Achievements</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Builds</a></li>
@@ -189,9 +186,6 @@
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Co-Op</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Invasions</a></li>
                             <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Vengeance System</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Hidden Tea House</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Revenants</a></li>
-                            <li><a class="block px-4 py-2 hover:bg-gray-600 hover:text-white" href="#">Benevolent Graves</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -250,7 +244,7 @@
         <!-- ========== ==========
         Basics (Main Card 1)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -270,10 +264,7 @@
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Character Stats</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">??? The Shrine ???</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">The Dojo</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="">The Battleflag</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">NG+ Cycles</a>
@@ -284,7 +275,7 @@
         <!-- ========== ==========
         Combat (Main Card 2)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -297,6 +288,9 @@
             link list
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
+                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
+                    <a class="px-2 w-full  text-xl text-stone-900" href="">Combat Basics</a>
+                </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Deflect</a>
                 </li>
@@ -313,7 +307,7 @@
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Five Phases / Status Effects</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">??? Advanced Tech ???</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="">Advanced Tech</a>
                 </li>
             </ul>
         </div>
@@ -321,7 +315,7 @@
         <!-- ========== ==========
         Equipment (Main Card 3)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -361,7 +355,7 @@
         <!-- ========== ==========
         World (Main Card 4)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -398,7 +392,7 @@
         <!-- ========== ==========
         Tools & Resources (Main Card 5)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -412,16 +406,10 @@
             ========== -->
             <ul class="mt-5 w-full flex flex-col items-start justify-center gap-2">
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Smithing Texts</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Temper Tables</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Blacksmith</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Stone of Penance</a>
+                    <a class="px-2 w-full  text-xl text-stone-900" href="">Embedment Tables</a>
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Farming Resources</a>
@@ -438,7 +426,7 @@
         <!-- ========== ==========
         Online (Main Card 6)
         ========== ========== -->
-        <div class="mask my-6 md:my-0 md:h-[660px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
+        <div class="mask my-6 md:my-0 md:h-[510px] w-full p-4 rounded-xl flex flex-col items-start bg-dark-peach">
             <!-- ========== 
             top row 
             ========== -->
@@ -459,15 +447,6 @@
                 </li>
                 <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
                     <a class="px-2 w-full  text-xl text-stone-900" href="">Vengeance System</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Hidden Tea House</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Revenants</a>
-                </li>
-                <li class="mask w-full py-2 rounded flex items-center gap-1 hover:bg-light-peach">
-                    <a class="px-2 w-full  text-xl text-stone-900" href="">Benevolent Graves</a>
                 </li>
             </ul>
         </div>
